<resources>
    <string name="app_name">EventApp</string>

    <!-- Facebook Button -->
    <string name="facebook_login_button">Continue with Facebook</string>

    <!-- Menu Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nearby_events">Nearby Events</string>
    <string name="my_events">My Events</string>
    <string name="popular_events">Popular Events</string>
    <string name="notifications">Notifications</string>
    <string name="new_event">New Event</string>

    <!-- Activity Title -->
    <string name="title_activity_private_area">Private Area</string>

    <!-- New Event -->
    <string name="hint_title">Title</string>
    <string name="hint_today">Today</string>
    <string name="hint_now">Now</string>
    <string name="hint_end_time">End time</string>
    <string name="hint_end_date">End date</string>
    <string name="hint_description">Description</string>
    <string name="hint_privacy">Private event</string>
    <string name="hint_invite_user">Invite users</string>
    <string name="hint_hashtag">Hashtag</string>
    <string name="hint_weather_constraints">Weather constraints</string>

    <!-- Weather constraint-->
    <string name="thunderstorm">Thunderstorm</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="clearSky">Clear sky</string>
    <string name="clouds">Clouds</string>
    <string name="extreme">Extreme</string>
</resources>
